@@ -7,12 +7,13 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.0.RELEASE</version>
+    <version>2.7.3</version>
+    <relativePath/>
   </parent>
 
   <groupId>org.biopax.validator</groupId>
   <artifactId>biopax-validator-web</artifactId>
-  <version>5.0.0-SNAPSHOT</version>
+  <version>5.1.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>Webservice</name>
   <description>BioPAX Validator Web Service</description>
@@ -21,8 +22,7 @@
   <inceptionYear>2008</inceptionYear>
 
   <organization>
-    <name>University of Toronto (baderlab.org) and Memorial Sloan-Kettering Cancer Center (cbio.mskcc.org).
-      BioPAX.org</name>
+    <name>BioPAX.org</name>
     <url>https://www.biopax.org</url>
   </organization>
 
@@ -46,8 +46,6 @@
   </issueManagement>
 
   <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/BioPAX/validator</url>
   </ciManagement>
 
   <scm>
@@ -98,45 +96,25 @@
   </developers>
 
   <properties>
+    <spring.version>5.3.23</spring.version>
     <start-class>org.biopax.validator.web.Application</start-class>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <paxtools.version>5.2.1-SNAPSHOT</paxtools.version>
     <license.licenseName>MIT</license.licenseName>
-    <commons-lang3.version>3.8.1</commons-lang3.version>
-    <slf4j.version>1.7.25</slf4j.version>
-    <logback.version>1.2.3</logback.version>
-    <commons-beanutils.version>1.9.3</commons-beanutils.version>
-    <commons-digester.version>2.1</commons-digester.version>
-    <commons-collections.version>3.2.2</commons-collections.version>
-    <taglibs.standard.version>1.1.2</taglibs.standard.version>
-    <commons-fileupload.version>1.3.3</commons-fileupload.version>
-    <commons-io.version>2.7</commons-io.version>
-    <javax.activation.version>1.2.0</javax.activation.version>
-    <jaxb-runtime.version>2.4.0-b180830.0438</jaxb-runtime.version>
-    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
-    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
-    <commons-text.version>1.6</commons-text.version>
     <docker.image.prefix>pathwaycommons</docker.image.prefix>
-    <dockerfile-maven-plugin.version>1.4.4</dockerfile-maven-plugin.version>
-    <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
-    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-    <jvm.options>-Xmx3g -Dfile.encoding=UTF-8 -ea</jvm.options>
+    <jvm.options>-Xmx3g -Dfile.encoding=UTF-8 -ea --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvm.options>
     <agent>${settings.localRepository}/org/springframework/spring-instrument/${spring.version}/spring-instrument-${spring.version}.jar</agent>
-    <asciidoctor-maven-plugin.version>1.5.7.1</asciidoctor-maven-plugin.version>
-    <spring-restdocs-asciidoctor.version>2.0.2.RELEASE</spring-restdocs-asciidoctor.version>
   </properties>
 
   <build>
     <finalName>biopax-validator-web</finalName>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler-plugin.version}</version>
+        <version>3.8.1</version>
         <configuration>
-          <!--<release>10</release>-->
-          <source>8</source>
-          <target>8</target>
+          <release>18</release>
         </configuration>
       </plugin>
       <plugin>
@@ -156,24 +134,19 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.2</version>
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
       <plugin>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-maven-plugin</artifactId>
-        <version>3.1.7</version>
-        <configuration>
-          <onlyAnalyze>org.biopax.validator.web.-</onlyAnalyze>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
         <configuration>
-          <argLine>${jvm.options} -ea</argLine>
+          <argLine>${jvm.options}</argLine>
           <includes>
             <include>**/*Test.java</include>
           </includes>
@@ -183,6 +156,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.22.1</version>
         <configuration>
           <argLine>${jvm.options} -javaagent:${agent}</argLine>
           <runOrder>alphabetical</runOrder>
@@ -195,26 +169,18 @@
       <plugin>
         <groupId>com.spotify</groupId>
         <artifactId>dockerfile-maven-plugin</artifactId>
+        <version>1.4.4</version>
         <configuration>
           <repository>${docker.image.prefix}/biopax-validator</repository>
           <buildArgs>
             <JAR_FILE>target/${project.build.finalName}.war</JAR_FILE>
           </buildArgs>
         </configuration>
-        <!--<executions>-->
-        <!--<execution>-->
-        <!--<id>default</id>-->
-        <!--<phase>deploy</phase>-->
-        <!--<goals>-->
-        <!--<goal>build</goal>-->
-        <!--<goal>push</goal>-->
-        <!--</goals>-->
-        <!--</execution>-->
-        <!--</executions>-->
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <version>3.10.0</version>
         <configuration>
           <skip>true</skip>
         </configuration>
@@ -222,7 +188,7 @@
       <plugin>
         <groupId>org.asciidoctor</groupId>
         <artifactId>asciidoctor-maven-plugin</artifactId>
-        <version>${asciidoctor-maven-plugin.version}</version>
+        <version>2.2.2</version>
         <executions>
           <execution>
             <id>generate-docs</id>
@@ -240,13 +206,15 @@
           <dependency>
             <groupId>org.springframework.restdocs</groupId>
             <artifactId>spring-restdocs-asciidoctor</artifactId>
-            <version>${spring-restdocs-asciidoctor.version}</version>
+            <version>2.0.6.RELEASE</version>
           </dependency>
         </dependencies>
       </plugin>
       <plugin>
         <!-- maven-resources-plugin must go after asciidoctor-maven-plugin (same phase)-->
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>copy-resources</id>
@@ -300,22 +268,22 @@
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
-      <version>${javax.annotation-api.version}</version>
+      <version>1.3.2</version>
     </dependency>
     <dependency>
       <groupId>com.sun.activation</groupId>
       <artifactId>javax.activation</artifactId>
-      <version>${javax.activation.version}</version>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
-      <version>${jaxb-api.version}</version>
+      <version>2.4.0-b180830.0359</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jaxb</groupId>
       <artifactId>jaxb-runtime</artifactId>
-      <version>${jaxb-runtime.version}</version>
+      <version>2.4.0-b180830.0438</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
@@ -353,7 +321,7 @@
     <dependency>
       <groupId>taglibs</groupId>
       <artifactId>standard</artifactId>
-      <version>${taglibs.standard.version}</version>
+      <version>1.1.2</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -362,12 +330,12 @@
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
-      <version>${commons-fileupload.version}</version>
+      <version>1.3.3</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>${commons-io.version}</version>
+      <version>2.11.0</version>
     </dependency>
     <!--jackson-databind allows to use JAXB annotations for converting beans to JSON -->
     <dependency>
@@ -379,6 +347,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-instrument</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
     </dependency>
 
     <!-- logging -->
