@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.biopax.validator</groupId>
   <artifactId>parent</artifactId>
-  <version>5.0.0-SNAPSHOT</version>
+  <version>5.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -26,8 +26,7 @@
   <inceptionYear>2008</inceptionYear>
 
   <organization>
-    <name>University of Toronto (baderlab.org) and Memorial Sloan-Kettering Cancer Center (cbio.mskcc.org).
-      BioPAX.org</name>
+    <name>BioPAX.org</name>
     <url>http://www.biopax.org</url>
   </organization>
 
@@ -53,8 +52,6 @@
   </issueManagement>
 
   <ciManagement>
-    <system>Travis CI</system>
-    <url>https://travis-ci.org/BioPAX/validator</url>
   </ciManagement>
 
   <scm>
@@ -117,103 +114,38 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <github.global.server>github</github.global.server>
-
-    <!-- 5.1.2.RELEASE does not fail but cannot catch syntax errors using LTW-->
-    <spring.version>5.3.20</spring.version>
+    <spring.version>5.3.23</spring.version>
     <agent>${settings.localRepository}/org/springframework/spring-instrument/${spring.version}/spring-instrument-${spring.version}.jar</agent>
-
-    <paxtools.version>5.2.1-SNAPSHOT</paxtools.version>
+    <paxtools.version>5.3.0-SNAPSHOT</paxtools.version>
     <license.licenseName>MIT</license.licenseName>
-    <junit.version>4.13.1</junit.version>
-    <commons-lang3.version>3.8.1</commons-lang3.version>
-    <aspectj.version>1.9.2</aspectj.version>
-    <slf4j.version>1.7.25</slf4j.version>
-    <logback.version>1.2.3</logback.version>
-    <commons-beanutils.version>1.9.4</commons-beanutils.version>
-    <commons-digester.version>2.1</commons-digester.version>
-    <commons-collections.version>3.2.2</commons-collections.version>
-    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-    <jstl.version>1.2</jstl.version>
-    <taglibs.standard.version>1.1.2</taglibs.standard.version>
-    <commons-fileupload.version>1.3.3</commons-fileupload.version>
-    <commons-io.version>2.7</commons-io.version>
-    <javax.activation.version>1.2.0</javax.activation.version>
-    <jaxb-runtime.version>2.4.0-b180830.0438</jaxb-runtime.version>
-    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
-    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
-    <commons-text.version>1.6</commons-text.version>
-
-    <!-- plugin dependencies versions -->
-    <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
-    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-    <maven-war-plugin.version>3.2.2</maven-war-plugin.version>
-    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-    <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
-    <maven-failsafe-plugin.version>2.18.1</maven-failsafe-plugin.version>
-    <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
-    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-    <maven-site-plugin.version>3.7.1</maven-site-plugin.version>
-    <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
-    <maven-jxr-plugin.version>3.0.0</maven-jxr-plugin.version>
-    <maven-project-info-reports-plugin.version>3.0.0</maven-project-info-reports-plugin.version>
-    <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
-    <jaxb2-maven-plugin.version>2.4</jaxb2-maven-plugin.version>
-    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-    <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-    <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
-    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-    <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-    <doxia-integration-tools.version>1.6</doxia-integration-tools.version>
-    <wagon-ssh.version>2.8</wagon-ssh.version>
-    <wagon-scm.version>2.8</wagon-scm.version>
-    <docker.image.prefix>pathwaycommons</docker.image.prefix>
-    <dockerfile-maven-plugin.version>1.4.4</dockerfile-maven-plugin.version>
-    <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
   </properties>
 
   <build>
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+            <release>17</release>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
-          <version>${versions-maven-plugin.version}</version>
+          <version>2.7</version>
           <configuration>
             <generateBackupPoms>false</generateBackupPoms>
           </configuration>
         </plugin>
         <plugin>
-          <groupId>com.spotify</groupId>
-          <artifactId>dockerfile-maven-plugin</artifactId>
-          <version>${dockerfile-maven-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven-compiler-plugin.version}</version>
-          <configuration>
-            <!--<release>10</release>-->
-            <source>8</source>
-            <target>8</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>${maven-deploy-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>${maven-install-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>${maven-clean-plugin.version}</version>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin.version}</version>
+          <version>2.22.2</version>
           <configuration>
-            <argLine>-Xmx3g -Dfile.encoding=UTF-8 -ea</argLine>
+            <testFailureIgnore>false</testFailureIgnore>
+            <argLine>-Xmx3g -Dfile.encoding=UTF-8 -ea --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
             <includes>
               <include>**/*Test.java</include>
             </includes>
@@ -223,7 +155,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>${maven-failsafe-plugin.version}</version>
+          <version>2.22.1</version>
           <configuration>
             <argLine>-Xmx3g -Dfile.encoding=UTF-8 --illegal-access=permit -javaagent:${agent}</argLine>
             <runOrder>alphabetical</runOrder>
@@ -236,7 +168,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>${maven-jar-plugin.version}</version>
+          <version>3.1.0</version>
           <executions>
             <execution>
               <goals>
@@ -248,7 +180,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>${maven-source-plugin.version}</version>
+          <version>3.2.1</version>
           <executions>
             <execution>
               <id>attach-sources</id>
@@ -260,38 +192,8 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>${maven-war-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>${maven-assembly-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jxr-plugin</artifactId>
-          <version>${maven-jxr-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>${maven-project-info-reports-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>jaxb2-maven-plugin</artifactId>
-          <version>${jaxb2-maven-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>${maven-resources-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>${maven-site-plugin.version}</version>
+          <version>3.10.0</version>
           <executions>
             <execution>
               <id>attach-descriptor</id>
@@ -307,7 +209,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>${maven-release-plugin.version}</version>
+          <version>2.5.3</version>
           <configuration>
             <goals>deploy site-deploy</goals>
             <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -316,19 +218,14 @@
           </configuration>
         </plugin>
         <plugin>
-          <groupId>org.sonatype.plugins</groupId>
-          <artifactId>nexus-staging-maven-plugin</artifactId>
-          <version>${nexus-staging-maven-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-gpg-plugin</artifactId>
           <groupId>org.apache.maven.plugins</groupId>
-          <version>${maven-gpg-plugin.version}</version>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>3.3.0</version>
         </plugin>
         <plugin>
-          <groupId>com.github.spotbugs</groupId>
-          <artifactId>spotbugs-maven-plugin</artifactId>
-          <version>3.1.7</version>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>jaxb2-maven-plugin</artifactId>
+          <version>2.4</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -336,22 +233,18 @@
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh</artifactId>
-        <version>${wagon-ssh.version}</version>
       </extension>
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-scm</artifactId>
-        <version>${wagon-scm.version}</version>
       </extension>
       <extension>
         <groupId>org.apache.maven.doxia</groupId>
         <artifactId>doxia-integration-tools</artifactId>
-        <version>${doxia-integration-tools.version}</version>
       </extension>
     </extensions>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <executions>
           <execution>
@@ -363,11 +256,9 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <executions>
           <execution>
@@ -379,13 +270,6 @@
         </executions>
         <configuration>
           <skipDeploy>true</skipDeploy>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-maven-plugin</artifactId>
-        <configuration>
-          <onlyAnalyze>org.biopax.validator.-</onlyAnalyze>
         </configuration>
       </plugin>
     </plugins>
@@ -404,37 +288,37 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>${commons-lang3.version}</version>
+        <version>3.12.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
-        <version>${commons-text.version}</version>
+        <version>1.9</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
+        <version>2.0.1</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>log4j-over-slf4j</artifactId>
-        <version>${slf4j.version}</version>
+        <version>2.0.1</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
-        <version>${slf4j.version}</version>
+        <version>2.0.1</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>${logback.version}</version>
+        <version>1.4.1</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
+        <version>4.13.2</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -502,76 +386,76 @@
       <dependency>
         <groupId>org.aspectj</groupId>
         <artifactId>aspectjweaver</artifactId>
-        <version>${aspectj.version}</version>
+        <version>1.9.7</version>
       </dependency>
       <dependency>
         <groupId>org.aspectj</groupId>
         <artifactId>aspectjrt</artifactId>
-        <version>${aspectj.version}</version>
+        <version>1.9.9.1</version>
       </dependency>
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
-        <version>${commons-beanutils.version}</version>
+        <version>1.9.3</version>
       </dependency>
       <dependency>
         <groupId>commons-digester</groupId>
         <artifactId>commons-digester</artifactId>
-        <version>${commons-digester.version}</version>
+        <version>1.8.1</version>
       </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
-        <version>${commons-collections.version}</version>
+        <version>3.2.2</version>
       </dependency>
       <dependency>
         <groupId>taglibs</groupId>
         <artifactId>standard</artifactId>
-        <version>${taglibs.standard.version}</version>
+        <version>1.1.2</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
-        <version>${javax.servlet-api.version}</version>
+        <version>4.0.1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
-        <version>${jstl.version}</version>
+        <version>1.2</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>commons-fileupload</groupId>
         <artifactId>commons-fileupload</artifactId>
-        <version>${commons-fileupload.version}</version>
+        <version>1.3.3</version>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>${commons-io.version}</version>
+        <version>2.11.0</version>
       </dependency>
       <dependency>
         <groupId>javax.annotation</groupId>
         <artifactId>javax.annotation-api</artifactId>
-        <version>${javax.annotation-api.version}</version>
+        <version>1.3.2</version>
       </dependency>
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>${jaxb-api.version}</version>
+        <version>2.4.0-b180830.0359</version>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-runtime</artifactId>
-        <version>${jaxb-runtime.version}</version>
+        <version>2.4.0-b180830.0438</version>
         <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>com.sun.activation</groupId>
         <artifactId>javax.activation</artifactId>
-        <version>${javax.activation.version}</version>
+        <version>1.2.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -597,7 +481,6 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <!-- one of obo-fetcher's deps uses log4j directly-->
@@ -617,7 +500,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${maven-javadoc-plugin.version}</version>
         <configuration>
           <linksource>true</linksource>
           <notimestamp>true</notimestamp>
@@ -663,7 +545,6 @@
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <configuration>
           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-          <!--<dependencyLocationsEnabled>false</dependencyLocationsEnabled>-->
         </configuration>
         <reportSets>
           <reportSet>
@@ -673,14 +554,11 @@
               <report>modules</report>
               <report>cim</report>
               <report>dependencies</report>
-              <!--                             <report>dependency-convergence</report> -->
               <report>dependency-info</report>
               <report>dependency-management</report>
               <report>distribution-management</report>
               <report>issue-tracking</report>
               <report>license</report>
-              <!--                             <report>plugin-management</report> -->
-              <!--                             <report>plugins</report> -->
               <report>project-team</report>
               <report>mailing-list</report>
               <report>scm</report>
@@ -707,6 +585,7 @@
             </configuration>
           </plugin>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
             <executions>
               <execution>
@@ -718,6 +597,7 @@
             </executions>
           </plugin>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <executions>
               <execution>
